unpackaged/main/default/objects/Project_Stakeholders__c/Project_Stakeholders__c.object-meta.xml
<CustomObject>
    <label>Project Stakeholders</label>
    <nameField>
        <label>Project Stakeholders Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Stakeholders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>