unpackaged/main/default/objects/Project_Stakeholders__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <description>Stakeholders department</description>
    <inlineHelpText>Stakeholders department</inlineHelpText>
    <label>Department</label>
    <length>255</length>
    <type>Text</type>
</CustomField>