unpackaged/main/default/objects/Project_Stakeholders__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Stakeholder email address</description>
    <inlineHelpText>Stakeholder email address</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>