unpackaged/main/default/objects/Project_Stakeholders__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>Stakeholders Role</description>
    <inlineHelpText>Stakeholders role</inlineHelpText>
    <label>Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>